# SYMA

./: .gitignore  README.md  pyproject.toml
results/: simple_similarity_recommandations.csv  user_similarity_recommandation.csv
src/: data_exploration.ipynb  research.ipynb  script.py
