[tool.poetry]
name = "syma"
version = "0.1.0"
description = "http://www.recsyschallenge.com/2022/"
authors = ["Henri JAMET <henri.jamet@epita.fr>", "Corentin DUCHENE <corentin.duchene@epita.fr>", "Erwan GOUDARD <erwan.goudard@epita.fr>"]

[tool.poetry.dependencies]
python = "3.9.5"
pandas = "^1.4.2"
scikit-surprise = "^1.1.1"
black = "^22.3.0"
sklearn = "^0.0"
ipykernel = "4.10.1"
traitlets = "4.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
